@@ -7,7 +7,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Taskmaster</RootNamespace>
     <AssemblyName>Taskmaster</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <ApplicationIcon>taskmaster-hammer.ico</ApplicationIcon>
     <CodePage>65001</CodePage>
     <IsWebBootstrapper>false</IsWebBootstrapper>
